# igvie-1

./: CMakeLists.txt  main.cpp
include/: animation.h  buffer_vao.h  camera.h  chart.h  date_input.h  display.h  draw.h  font.h  infomation_input_field.h  input_plate.h  model.h  object.h  position.h  shader.h  text.h  texture.h  time_model.h  window.h
shaders/: colores.txt  colores1.txt  colores2.txt  colores7.txt  colores8.txt  colores9.txt  coloresChart.txt  coloresId.txt  coloresSB.txt  coloresText.txt  vector.txt  vector1.txt  vector2.txt  vectorChart.txt  vectorSB.txt  vectorText1.txt
source/: buffer_vao.cpp  chart.cpp  date_input.cpp  display.cpp  draw.cpp  input_plate.cpp  mergine_object.cpp  model.cpp  object.cpp  position.cpp  shader.cpp  text.cpp  time_model.cpp  window.cpp
